test/corpus/fail/prim-package-flag.mo
=========
prim-package-flag.mo
=========

//MOC-FLAG --package prim .

---

(source_file
  (line_comment))
